tests/fixtures/language/v3/invalid/triggers/empty-when-clause.allium
-- allium: 3

entity User {
    email: String
}

rule MalformedTrigger {
    when:
    ensures: User.created(email: "x")
}
